k8s/security/allow-migrate.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-migrate
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: anamnesis-migrate
  policyTypes:
    - Egress
  egress:
    - {}
