k8s/security/allow-nats.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-nats
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: nats
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: anamnesis-api
      ports:
        - protocol: TCP
          port: 4222
    - from:
        - podSelector:
            matchLabels:
              app: prometheus
      ports:
        - protocol: TCP
          port: 8222
